--- a/enigma/src/index.css
+++ b/enigma/src/index.css
@@ -1,13 +1,304 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Cal+Sans&family=Fuzzy+Bubbles:wght@700&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Overpass:ital,wght@0,100..900;1,100..900&family=Pixelify+Sans:wght@400..700&family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+*{
+  font-family:'Overpass';
+  color: #f6f7f9;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html, body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  min-height:100vh;
+  background-color: #1f1f1f;
+  overflow:auto;
+}
+
+#card{
+  width:80vw;
+  display:flex;
+  flex-direction: column;
+}
+
+#top-rectangle{
+  width:100%;
+  font-size:155%;
+  padding:2.25% 3% 0% 3%;
+  box-sizing: border-box;
+  font-weight:400;
+}
+
+#bottom-rectangle{
+  width:100%;
+  font-size:120%;
+  padding:1% 3% 3% 3%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  gap:15px;
+}
+
+.inner-description{
+  font-size:80%;
+  margin:1% 0 0% 0;
+}
+
+a{
+  text-decoration: underline;
+  margin:5%;
+  margin-left:0;
+}
+
+a:hover{
+  cursor:pointer;
+}
+
+#enigma-body{
+  width: 85%;
+  aspect-ratio: 1.5;
+  background-color: #383e47;
+  box-sizing: border-box;
+  margin: 0 auto;
+  border-radius: 15px;
+}
+
+#keyboard{
+  margin-top:1.5%;
+}
+
+#top-row, #middle-row, #bottom-row{
+  display: flex;
+  justify-content: center;
+}
+
+.unpressed-keys{
+  width:7.35%;
+  margin:0.5%;
+  margin-left:0.65%;
+  margin-right:0.65%;
+}
+
+.pressed-key{
+  transform: scale(0.975);
+  transition: transform 0.1s ease;
+}
+
+#lamps{
+  margin-top:1.5%;
+}
+
+.lamp {
+  background-color: #f6f7f9;;
+  border-radius: 50%;
+  height: 2.25rem;
+  width: 2.25rem;
+  font-size: small;
+  color: rgb(153, 153, 153);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin:0.5%;
+  margin-left:0.65%;
+  margin-right:0.65%;
+}
+
+.lit-lamp{
+  background-color: rgb(255, 255, 156);
+  color: rgb(122, 122, 122);
+  box-shadow: 0px 0px 5px 5px rgb(255, 255, 156);
+}
+
+#rotors-container{
+  margin-top:1.5%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.rotor{
+  width:15%;
+  margin-left:1%;
+  margin-right:1%;
+}
+
+#rotors{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 2;
+}
+
+#rod{
+  position: absolute;
+  z-index: 1;
+  width:15%;
+
+}
+
+.gears{
+  width:8.5%;
+}
+
+#temp-styling{
+  margin-left:1%;
+}
+
+textarea{
+  display:inline-block;
+  vertical-align: top;
+  width:30%;
+  resize:none;  
+  margin-left:2.5%;
+  margin-right:2.5%;
+  font-size:85%;
+  color: #f6f7f9;
+  background-color: #383e47;
+  border: none;
+}
+
+textarea:hover{
+  cursor: pointer;
+  background-color: #444b57;
+}
+
+#display-area{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+button{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: white;
+  border: none;
+  padding: 1%;
+  display: inline-block;
+  margin-right:1.25%;
+  background-color: #383e47;
+  border-radius: 7.75px;
+}
+
+button:hover{
+  cursor: pointer;
+}
+
+.description-modal{
+  position: fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.description-content{
+  background-color: #1f1f1f;
+  max-width: 500px;
+  width: 80%;
+  z-index: 1001;
+}
+
+.description-modal-close-header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2.5%;
+  padding-left:4%;
+  padding-right:4%;
+  background-color: #383e47;
+  border-top-left-radius: 3.5px;
+  border-top-right-radius: 3.5px;
+  border:0.1px solid #8e8e8e;
+}
+
+.close-description-modal{
+  border: none;
+  padding: 3.5% 4% 3.5% 4%;
+}
+
+.close-description-modal:hover{
+  border-radius: 2px;
+  background-color: #3d434c;
+  border: none;
+}
+
+.description{
+  padding: 1.25% 4% 2.25% 4%;
+  border-left:0.1px solid #8e8e8e;
+  border-right:0.1px solid #8e8e8e;
+}
+
+.description-modal-title{
+  font-size:120%;
+  font-weight: bolder;
+}
+
+.description-modal-footer{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  background-color: #383e47;
+  border-bottom-left-radius: 3.5px;
+  border-bottom-right-radius: 3.5px;
+  padding: 4% 4% 4% 4%;
+  border-top:0.1px solid #8e8e8e;
+}
+
+.description-footer-button{
+  background-color: #3074d4;
+  padding: 2% 5% 2% 5%;
+  border-radius: 2px;
+  font-size: 85%;
+}
+
+.description-footer-button:hover{
+  background-color: #275fae;
+  padding: 2% 5% 2% 5%;
+  border-radius: 2px;
+  cursor: pointer;
+}
+
+#mobile-view{
+  display: none;
+}
+
+#mobile-inner{
+  display: none;
+}
+
+@media (max-width:480px)  {
+  #mobile-view{
+    position: fixed;
+    top:0;
+    left:0;
+    width: 100vw;
+    height: 100vh;
+    background-color: #1f1f1f;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    color: #f6f7f9;
+  }
+  #mobile-inner{
+    opacity:1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1001;
+    padding: 10%;
+    width: 70vw;
+    height: 60vh;
+    background-color: #383e47;
+  }
+  #rotors-container{
+    display: none;
+  }
 }
